update quote style to curly

--- a/pages/about.html
+++ b/pages/about.html
@@ -7,7 +7,7 @@ preload: hero-about-us.svg
 ---
 
 {% include hero_banner.html
-  hero_title = 'We&apos;re Skylight!'
+  hero_title = 'We’re Skylight!'
   hero_content = 'Our mission is to make government work <br class="linebreak">in a digital world.'
   color = 'info'
   image = 'hero-about-us.svg'
@@ -24,17 +24,17 @@ preload: hero-about-us.svg
       <div class="about-info-row">
         <div class="about-info-col">
           <p>
-            Skylight was launched in June of 2017. We're currently made up of 55 people and
+            Skylight was launched in June of 2017. We’re currently made up of 55 people and
             one ferret. A lot of us originally worked for civic-oriented groups such as 18F,
             the U.S. Digital Service, and the Presidential Innovation Fellows.
-            Now, as part of Skylight, we're working hard to cultivate an incredible
+            Now, as part of Skylight, we’re working hard to cultivate an incredible
             team and culture.
           </p>
 
           <p>
             What brings us together is a passion for creating better outcomes for
-            the public through great government digital services. We're basically impact junkies.
-            But we're also engineers, developers, designers, product managers, consultants,
+            the public through great government digital services. We’re basically impact junkies.
+            But we’re also engineers, developers, designers, product managers, consultants,
             writers, speakers, inventors, roboticists, gamers, authors, veterans,
             entrepreneurs, parents, and more. Such a diverse team always gives us a
             unique perspective on things.
@@ -42,9 +42,9 @@ preload: hero-about-us.svg
 
           <p>
             Our official headquarters is in sunny <a href="https://goo.gl/maps/3pX7v6YjSmpkwchz5">Sarasota, Florida</a>,
-            but we're a distributed and remote-friendly team currently spread across 24 different states.
+            but we’re a distributed and remote-friendly team currently spread across 24 different states.
             Sometimes the nature of our client work calls for closer proximity to their location.
-            So far, we've worked with clients located in places like Washington DC, Hartford (Connecticut),
+            So far, we’ve worked with clients located in places like Washington DC, Hartford (Connecticut),
             Montgomery (Alabama), Baltimore (Maryland), and Ottawa (Canada).
           </p>
         </div>
@@ -110,10 +110,10 @@ preload: hero-about-us.svg
           <p>
             If you have a question for us, or would just like to get in touch, drop us a message
             at <a href="mailto:hello@skylight.digital">hello@skylight.digital</a>.
-            If you'd like to inquire about hiring us for a job, <a href="/connect/contact/">fill out this short form</a>.
-            If you're interested in joining our team, <a href="/careers/join/">check out our career opportunities</a>.
-            If you'd like to explore forming a partnership to pursue government opportunities,
-            <a href="/connect/contact/">let's talk business</a>.
+            If you’d like to inquire about hiring us for a job, <a href="/connect/contact/">fill out this short form</a>.
+            If you’re interested in joining our team, <a href="/careers/join/">check out our career opportunities</a>.
+            If you’d like to explore forming a partnership to pursue government opportunities,
+            <a href="/connect/contact/">let’s talk business</a>.
           </p>
 
           <p>
