--- a/pages/services.html
+++ b/pages/services.html
@@ -23,7 +23,7 @@ digital-first agency.' color = 'blue' image = 'hero-services.svg' %}
           <h2>Service Delivery</h2>
           <p>
             <b
-              >Today's public expects their interactions with the government to
+              >Today’s public expects their interactions with the government to
               be delightful, secure, and empowering.</b
             >
             We specialize in creating exceptional user experiences and enduring
@@ -52,7 +52,7 @@ digital-first agency.' color = 'blue' image = 'hero-services.svg' %}
           </ul>
         </div>
         <div class="col-sm-6">
-          <h3>How we've helped others:</h3>
+          <h3>How we’ve helped others:</h3>
           <ul>
             <li>
               <a href="/work/experience/ct-ece-reporter/"
@@ -68,7 +68,7 @@ digital-first agency.' color = 'blue' image = 'hero-services.svg' %}
             </li>
             <li>
               <a href="/work/experience/usaf-gearfit/"
-                >Built an application for improving the U.S. Air Force's aircrew
+                >Built an application for improving the U.S. Air Force’s aircrew
                 safety and equipment operations</a
               >
             </li>
@@ -112,7 +112,7 @@ digital-first agency.' color = 'blue' image = 'hero-services.svg' %}
           </ul>
         </div>
         <div class="col-sm-6">
-          <h3>How we've helped others:</h3>
+          <h3>How we’ve helped others:</h3>
           <ul>
             <li>
               <a href="/work/experience/agile-acquisition-framework/"
@@ -155,7 +155,7 @@ digital-first agency.' color = 'blue' image = 'hero-services.svg' %}
         <div class="col-md-6 order-1 order-md-2">
           <img
             src="{{ site.baseurl }}/img/services-transformation.svg"
-            alt="Someone operating a conveyor belt that's transforming old computers into modern laptops"
+            alt="Someone operating a conveyor belt that’s transforming old computers into modern laptops"
           />
         </div>
       </div>
@@ -172,7 +172,7 @@ digital-first agency.' color = 'blue' image = 'hero-services.svg' %}
           </ul>
         </div>
         <div class="col-sm-6">
-          <h3>How we've helped others:</h3>
+          <h3>How we’ve helped others:</h3>
           <ul>
             <li>
               <a href="/work/experience/ct-oec-digital-transformation/"
@@ -186,7 +186,7 @@ digital-first agency.' color = 'blue' image = 'hero-services.svg' %}
             </li>
             <li>
               <a href="/work/experience/tsa-cloud-adoption/"
-                >Accelerated the Transportation Security Administration's
+                >Accelerated the Transportation Security Administration’s
                 adoption of the cloud</a
               >
             </li>
@@ -204,11 +204,11 @@ digital-first agency.' color = 'blue' image = 'hero-services.svg' %}
           <p>
             <b
               >Need immediate, high-impact support to address a problem or
-              opportunity that doesn't require a full-blown engagement?</b
+              opportunity that doesn’t require a full-blown engagement?</b
             >
             Our microconsulting services are designed specifically for that
             purpose, providing you with on-demand access to our expertise.
-            They're also conveniently priced within the government's
+            They’re also conveniently priced within the government’s
             micropurchase threshold, which makes engaging with us just a "swipe
             of the credit card away."
           </p>
@@ -239,7 +239,7 @@ digital-first agency.' color = 'blue' image = 'hero-services.svg' %}
           </ul>
         </div>
         <div class="col-sm-6">
-          <h3>How we've helped others:</h3>
+          <h3>How we’ve helped others:</h3>
           <ul>
             <li>
               <a href="/work/experience/va-mobile-product-strategy/"
@@ -310,7 +310,7 @@ digital-first agency.' color = 'blue' image = 'hero-services.svg' %}
           </ul>
         </div>
         <div class="col-sm-6">
-          <h3>How we've helped others:</h3>
+          <h3>How we’ve helped others:</h3>
           <ul>
             <li>
               <a href="/work/experience/digital-acquisition-accelerator/"
