--- a/pages/talks.html
+++ b/pages/talks.html
@@ -206,7 +206,7 @@ preload: hero-talks.svg
         ></div>
         <div class="blog-post-block">
           <h3 class="blog-post-title">
-            Dissecting the President's management agenda
+            Dissecting the President’s management agenda
           </h3>
           <p class="blog-post-text">Lorem ipsum</p>
         </div>
