--- a/pages/contact.html
+++ b/pages/contact.html
@@ -18,7 +18,7 @@ preload: hero-contact-us.svg
 
 <div class="contact-us text">
   <p>
-    Please describe what you're looking to do, and we'll follow up in one business day.
+    Please describe what you’re looking to do, and we’ll follow up in one business day.
     If you prefer, you can email us at <a href="mailto:hello@skylight.digital">hello@skylight.digital</a>.
   </p>
 
