--- a/pages/contracting.html
+++ b/pages/contracting.html
@@ -25,7 +25,7 @@ preload: hero-contracting.svg
       <li>Providers of <a href="/work/services/training/ditap/">DITAP training</a> for federal acquisition officers to learn about modern procurement practices</li>
       <li>Pioneers of industry technical standards, such as IPv6</li>
       <li>Founders of successful technology startups, such as <a href="/work/experience/talkto/">TalkTo</a></li>
-      <li>Former design and technical leaders of popular government-wide standards, products, and platforms, such as <a href="https://cloud.gov/">cloud.gov</a>, <a href="https://designsystem.digital.gov/">U.S. Web Design System</a>, and <a href="https://accessibility.18f.gov/">18F's Accessibility Guide</a></li>
+      <li>Former design and technical leaders of popular government-wide standards, products, and platforms, such as <a href="https://cloud.gov/">cloud.gov</a>, <a href="https://designsystem.digital.gov/">U.S. Web Design System</a>, and <a href="https://accessibility.18f.gov/">18F’s Accessibility Guide</a></li>
       <li>Recognized industry experts in several different areas, such as APIs and design systems</li>
       <li>Frequent contributors to <a href="/company/press/">industry press</a>, such as FCW, FedScoop, and Federal News Network</li>
       <li>Authors of popular books, such as "<a href="https://braydie.gitbooks.io/how-to-be-a-programmer/content/en/">How to be a Programmer"</a></li>
