--- a/pages/press.html
+++ b/pages/press.html
@@ -28,7 +28,7 @@ preload: hero-press.svg
             {{ item.title }}
           {% endif %}
         </h2>
-        <p class="mt-3">{{ item.summary }}</p>
+        <div class="mt-3">{{ item.summary | markdownify }}</div>
         <h3 class="project-title-tag mb-1">Full story</h3>
         <p><a href="{{ item.href }}">{{ item.title }}</a></p>
       </article>
