--- a/pages/trainings/ditap.html
+++ b/pages/trainings/ditap.html
@@ -8,7 +8,7 @@ redirect_from:
   - /work/services/training/ditap/apply/
 excerpt: Learn the skills required to master the art of digital acquisition through our expert-led, 6-month, part-time course.
 image: /img/ditap/ditap-banner.png
-image_description: Banner of Skylight's Digital IT Acquisition Professional Training course.
+image_description: Banner of Skylight’s Digital IT Acquisition Professional Training course.
 tags: [digital acquisition training, agile acquisition training]
 class: ditap
 preload: hero-training-single.svg
@@ -34,7 +34,7 @@ class_2_spots:
           <p class="hero-content text-shadow">
             Learn the skills required to master the art of digital acquisition
             through our expert-led, 6-month, part-time course. Upon completion,
-            you'll earn the Federal Acquisition Certification in Contracting
+            you’ll earn the Federal Acquisition Certification in Contracting
             Core-Plus Specialization in Digital Services (FAC-C-DS) and up to 80
             Continuous Learning Points.
           </p>
@@ -99,7 +99,7 @@ class_2_spots:
         </h2>
         <p class="text-intro">
           Acquire the skills you need to make procurement work for government in
-          today's digital world.
+          today’s digital world.
         </p>
 
         <div class="text-grid row">
@@ -155,7 +155,7 @@ class_2_spots:
               Our instructors are recognized experts in the field of digital
               acquisition, and are eager to share their past and current
               experiences with you. Through our blend of remote and onsite
-              learning, you'll have the chance to engage with the pioneers of
+              learning, you’ll have the chance to engage with the pioneers of
               modern procurement techniques.
             </p>
           </div>
@@ -193,9 +193,9 @@ class_2_spots:
           </div>
         </div>
 
-        <h2 id="curriculum">What you'll learn</h2>
+        <h2 id="curriculum">What you’ll learn</h2>
         <p class="text-intro">
-          In this program, you'll learn how to translate critical concepts and
+          In this program, you’ll learn how to translate critical concepts and
           resources in the field of digital acquisition into effective,
           real-world practice.
         </p>
@@ -210,11 +210,11 @@ class_2_spots:
             </p>
           </div>
           <div class="col-12 col-lg-4">
-            <h3>Understanding What You're Buying</h3>
+            <h3>Understanding What You’re Buying</h3>
             <p>
-              Learn how to determine what your customer's needs are, how to
+              Learn how to determine what your customer’s needs are, how to
               assess which digital services solutions are most likely to succeed
-              given your agency's current level of maturity, and how to conduct
+              given your agency’s current level of maturity, and how to conduct
               market research.
             </p>
           </div>
@@ -222,7 +222,7 @@ class_2_spots:
             <h3>How to buy</h3>
             <p>
               Understand how to develop an acquisition strategy that effectively
-              factors in the needs of your customer, your agency's digital
+              factors in the needs of your customer, your agency’s digital
               service maturity, your market research findings, and digital
               acquisition best practices.
             </p>
@@ -260,7 +260,7 @@ class_2_spots:
             I walked away with the critical know-how necessary to help change
             the way my agency acquires technology services. Because of what I
             learned, the contracting results that I experienced supporting some
-            of the government's most critical programs were the reasons why I
+            of the government’s most critical programs were the reasons why I
             became an acquisition professional in the first place.
           </p>
           <cite>
@@ -291,12 +291,12 @@ class_2_spots:
             <h3>Chris Cairns</h3>
             <p>
               Chris served as a White House Presidential Innovation Fellow, and
-              co-founded 18F. He started and built 18F's influential acquisition
+              co-founded 18F. He started and built 18F’s influential acquisition
               group, which specializes in digital acquisition methods. Chris is
-              known for pioneering 18F's
+              known for pioneering 18F’s
               <a href="/work/experience/agile-acquisition-framework/"
                 >agile acquisition framework</a
-              >, and for architecting the government's first-ever
+              >, and for architecting the government’s first-ever
               <a href="/work/experience/agile-delivery-services-marketplace/"
                 >agile vendor contract vehicle</a
               >
@@ -363,7 +363,7 @@ class_2_spots:
             <p>
               Lara is a former member of the U.S. Digital Service, where she
               served as the UX lead over the Veteran Appeals Modernization
-              initiative. She's also a former professor at NYU, SUNY, and Pratt
+              initiative. She’s also a former professor at NYU, SUNY, and Pratt
               Institute. Lara specializes in design leadership, design research,
               service design, and user experience design.
             </p>
@@ -408,7 +408,7 @@ class_2_spots:
         </a>
         <h2 id="faqs">Get answers</h2>
         <p class="text-intro mb-4">
-          Here are some questions that we're typically asked, along with our
+          Here are some questions that we’re typically asked, along with our
           responses:
         </p>
 
@@ -437,12 +437,12 @@ class_2_spots:
         DITAP come from?' accordion_body = accordion_body accordion_index = '1'
         %} {% capture accordion_body %}
         <p>
-          DITAP training isn't just for contracting professionals seeking
+          DITAP training isn’t just for contracting professionals seeking
           certification. Our training is for anyone who plays a role in the
           lifecycle of an acquisition, and wants to learn how to transform
           acquisition outcomes through digital acquisition methods. So whether
-          you're a finance officer, legal counsellor, procurement officer,
-          program manager, or technical manager, you'll benefit greatly from
+          you’re a finance officer, legal counsellor, procurement officer,
+          program manager, or technical manager, you’ll benefit greatly from
           this training.
         </p>
         {% endcapture %} {% include accordion.html accordion_header = 'Is this
@@ -461,7 +461,7 @@ class_2_spots:
           </li>
         </ul>
         {% endcapture %} {% include accordion.html accordion_header =
-        'What&#39;s the expected workload?' accordion_body = accordion_body
+        'What’s the expected workload?' accordion_body = accordion_body
         accordion_index = '3' %} {% capture accordion_body %}
         <ul>
           <li>6 months of Digital Acquisition training.</li>
@@ -475,7 +475,7 @@ class_2_spots:
           <li>Collaboration and networking opportunities.</li>
           <li>
             While most of the program can be completely remotely, travel for the
-            in-person classroom session isn't included.
+            in-person classroom session isn’t included.
           </li>
         </ul>
         {% endcapture %} {% include accordion.html accordion_header = 'What does
@@ -530,16 +530,16 @@ class_2_spots:
           </li>
           <li>
             If you submit a cancellation request fewer than 10 business days
-            prior to the start of the course, you'll be issued a credit toward a
+            prior to the start of the course, you’ll be issued a credit toward a
             future Skylight training course. The credit will be equal to the
             amount paid for the initial course less any applicable fees.
           </li>
           <li>
-            Should Skylight cancel the course for any reason, you'll be refunded
+            Should Skylight cancel the course for any reason, you’ll be refunded
             100% of the registration cost.
           </li>
         </ul>
-        {% endcapture %} {% include accordion.html accordion_header = "What's
+        {% endcapture %} {% include accordion.html accordion_header = "What’s
         the cancellation policy?" accordion_body = accordion_body
         accordion_index = '9' %}
       </div>
@@ -547,7 +547,7 @@ class_2_spots:
   </div>
 </div>
 
-{% include cta.html header = "Still have more questions?" text = "Please don't
-hesitate to ask. We've got answers for you." text_css_class =
+{% include cta.html header = "Still have more questions?" text = "Please don’t
+hesitate to ask. We’ve got answers for you." text_css_class =
 "page-subfooter-text-col" cta_path = "mailto:training@skylight.digital" cta =
 "Email us" icon_css_class = "fa fa-at" %}
