--- a/pages/trainings/ditap_executive.html
+++ b/pages/trainings/ditap_executive.html
@@ -4,7 +4,7 @@ title: "Digital IT Acquisition Professional (DITAP) Training &mdash; Executive E
 permalink: /work/services/training/ditap-executive/
 excerpt: Learn how to transform the way your agency procures modern technology products and services through a condensed, 1-day version of our 6-month DITAP training program.
 image: /img/ditap_executive/ditap-executive-banner.png
-image_description: Banner for the executive edition of Skylight's Digital IT Acquisition Professional Training course.
+image_description: Banner for the executive edition of Skylight’s Digital IT Acquisition Professional Training course.
 tags: [digital acquisition training, agile acquisition training]
 class: ditap
 preload: hero-training-single.svg
@@ -75,7 +75,7 @@ class_2_spots:
       <div class="mt-5">
         <h2 class="" id="overview">Become a digital acquisition leader</h2>
         <p class="text-intro">
-          Learn what it takes to transform how your agency procures in today's
+          Learn what it takes to transform how your agency procures in today’s
           digital world.
         </p>
 
@@ -129,7 +129,7 @@ class_2_spots:
             <p>
               Our instructors are recognized experts in the field of digital
               acquisition, and are eager to share their past and current
-              experiences with you. Through our course, you'll have the chance
+              experiences with you. Through our course, you’ll have the chance
               to engage with the pioneers of modern procurement techniques.
             </p>
           </div>
@@ -158,16 +158,16 @@ class_2_spots:
             <h3>Focused learning</h3>
             <p>
               Through a suite of presentation material, case studies, focused
-              discussions, and our team's expertise, you'll learn the essentials
+              discussions, and our team’s expertise, you’ll learn the essentials
               of digital acquisition and how to transform the way your agency
               procures.
             </p>
           </div>
         </div>
 
-        <h2 id="curriculum">What you'll learn</h2>
+        <h2 id="curriculum">What you’ll learn</h2>
         <p class="text-intro">
-          In this course, you'll learn how to translate critical concepts and
+          In this course, you’ll learn how to translate critical concepts and
           resources in the field of digital acquisition into effective,
           real-world practice at your agency.
         </p>
@@ -182,10 +182,10 @@ class_2_spots:
             </p>
           </div>
           <div class="col-12 col-lg-4">
-            <h3>Understanding What You're Buying</h3>
+            <h3>Understanding What You’re Buying</h3>
             <p>
               Learn how to determine customer needs, how to assess which digital
-              services solutions are most likely to succeed given your agency's
+              services solutions are most likely to succeed given your agency’s
               current level of maturity, and how to conduct market research.
             </p>
           </div>
@@ -233,7 +233,7 @@ class_2_spots:
             I walked away with the critical know-how necessary to help change
             the way my agency acquires technology services. Because of what I
             learned, the contracting results that I experienced supporting some
-            of the government's most critical programs were the reasons why I
+            of the government’s most critical programs were the reasons why I
             became an acquisition professional in the first place.
           </p>
           <cite>
@@ -264,12 +264,12 @@ class_2_spots:
             <h3>Chris Cairns</h3>
             <p>
               Chris served as a White House Presidential Innovation Fellow, and
-              co-founded 18F. He started and built 18F's influential acquisition
+              co-founded 18F. He started and built 18F’s influential acquisition
               group, which specializes in digital acquisition methods. Chris is
-              known for pioneering 18F's
+              known for pioneering 18F’s
               <a href="/work/experience/agile-acquisition-framework/"
                 >agile acquisition framework</a
-              >, and for architecting the government's first-ever
+              >, and for architecting the government’s first-ever
               <a href="/work/experience/agile-delivery-services-marketplace/"
                 >agile vendor contract vehicle</a
               >
@@ -336,7 +336,7 @@ class_2_spots:
             <p>
               Lara is a former member of the U.S. Digital Service, where she
               served as the UX lead over the Veteran Appeals Modernization
-              initiative. She's also a former professor at NYU, SUNY, and Pratt
+              initiative. She’s also a former professor at NYU, SUNY, and Pratt
               Institute. Lara specializes in design leadership, design research,
               service design, and user experience design.
             </p>
@@ -408,7 +408,7 @@ class_2_spots:
         </a>
         <h2 id="faqs">Get answers</h2>
         <p class="text-intro mb-4">
-          Here are some questions that we're typically asked, along with our
+          Here are some questions that we’re typically asked, along with our
           responses:
         </p>
 
@@ -432,10 +432,10 @@ class_2_spots:
         DITAP come from?' accordion_body = accordion_body accordion_index = '1'
         %} {% capture accordion_body %}
         <p>
-          To achieve mission success in today's digital world, agencies must
+          To achieve mission success in today’s digital world, agencies must
           master the art of digital acquisition. Leaders arguably play the most
           important role in making this transition happen, but need to manage
-          their time carefully. We've taken the core elements from our longer,
+          their time carefully. We’ve taken the core elements from our longer,
           6-month DITAP course and distilled it into an executive-level,
           crash-course summary &mdash; perfect for those who need a learning
           experience that gets right to the point.
@@ -459,7 +459,7 @@ class_2_spots:
           None! Any amount of familiarity with modern practices and technologies
           will be helpful, but this course is designed to give you an
           introduction to the fundamentals of modern digital acquisition. As
-          such, we don't assume you come in with any more knowledge than maybe
+          such, we don’t assume you come in with any more knowledge than maybe
           hearing the word "agile" a couple times.
         </p>
         {% endcapture %} {% include accordion.html accordion_header = 'What are
@@ -467,15 +467,15 @@ class_2_spots:
         accordion_body accordion_index = '4' %} {% capture accordion_body %}
         <p>
           Our default method of administering this course is remote. After you
-          register, you'll be given a Zoom weblink to join the meeting. We
+          register, you’ll be given a Zoom weblink to join the meeting. We
           recommend that you download the Zoom web-based application prior to
           joining class.
         </p>
         <p>
-          Remote course delivery isn't the only option, however. While we've
+          Remote course delivery isn’t the only option, however. While we’ve
           designed the course to be virtual so that anyone, anywhere can sign up
           to learn about digital acquisition, we love to administer in-person
-          training, too. If you'd like to schedule an in-person training for
+          training, too. If you’d like to schedule an in-person training for
           your organization, please
           <a href="mailto:training@skylight.digital">reach out to us</a>.
         </p>
@@ -510,7 +510,7 @@ class_2_spots:
         accordion_index = '8' %} {% capture accordion_body %}
         <p>
           Each course requires a minimum of 15 participants. The run dates are
-          contingent upon meeting this minimum. You'll be refunded 100% of the
+          contingent upon meeting this minimum. You’ll be refunded 100% of the
           registration cost in the event that we cancel the course.
         </p>
         {% endcapture %} {% include accordion.html accordion_header = 'Is the
@@ -523,12 +523,12 @@ class_2_spots:
           </li>
           <li>
             If you submit a cancellation request fewer than 10 business days
-            prior to the start of the course, you'll be issued a credit toward a
+            prior to the start of the course, you’ll be issued a credit toward a
             future Skylight training course. The credit will be equal to the
             amount paid for the initial course less any applicable fees.
           </li>
           <li>
-            Should Skylight cancel the course for any reason, you'll be refunded
+            Should Skylight cancel the course for any reason, you’ll be refunded
             100% of the registration cost.
           </li>
         </ul>
