--- a/pages/trainings/ditap_executive.html
+++ b/pages/trainings/ditap_executive.html
@@ -350,7 +350,7 @@ class_2_spots:
         >
           <div class="col-12">
             <h3 class="class-heading">
-              Thu, Oct 21, 9:00 AM &ndash; 5:00 PM ET
+              Thu, Oct 21, 9:00 am &ndash; 5:00 pm ET
             </h3>
             {% if page.class_1_spots %}
             <div class="class-spots">
@@ -381,7 +381,7 @@ class_2_spots:
         >
           <div class="col-12">
             <h3 class="class-heading">
-              Thu, Apr 21, 9:00 AM &ndash; 5:00 PM ET
+              Thu, Apr 21, 9:00 am &ndash; 5:00 pm ET
             </h3>
             {% if page.class_2_spots %}
             <div class="class-spots">
