--- a/pages/about.html
+++ b/pages/about.html
@@ -76,7 +76,7 @@ preload: hero-about-us.svg
                 <div class="employee-block">
                   <h3 class="employee-title">{{emp.full_name}}</h3>
                   <h4 class="employee-subtitle">{{emp.position}}</h4>
-                  <p class="employee-text">{{emp.bio}}</p>
+                  <div class="employee-text">{{emp.bio | markdownify }}</div>
                 </div>
                 <div class="employee-footer">
                     {% for social in emp.socials %}
