--- a/pages/join.html
+++ b/pages/join.html
@@ -71,9 +71,9 @@ preload: hero-join-us.svg
           </div>
           <div class="join__quote col-sm-8 col-lg-9">
             <p class="quote-text font-size-large">
-              "I love being able to work somewhere that empowers you to hone in on solving the
+              “I love being able to work somewhere that empowers you to hone in on solving the
               right problems in an increasingly complex environment, alongside some of the most
-              inspired and talented folks in the industry."
+              inspired and talented folks in the industry.”
             </p>
             <p><b><span class="text-gray-light">—</span> Charlye Tran,</b> Product Manager</p>
           </div>
@@ -87,8 +87,8 @@ preload: hero-join-us.svg
           </div>
           <div class="join__quote col-sm-8 col-lg-9">
             <p class="quote-text font-size-large">
-              "I appreciate Skylight’s holistic approach to helping agencies achieve digital mastery,
-              which is what the government needs more of from industry."
+              “I appreciate Skylight’s holistic approach to helping agencies achieve digital mastery,
+              which is what the government needs more of from industry.”
             </p>
 
             <p><b><span class="text-gray-light">—</span> Shashank Khandelwal,</b> VP of Human Services</p>
@@ -103,8 +103,8 @@ preload: hero-join-us.svg
           </div>
           <div class="join__quote col-sm-8 col-lg-9">
             <p class="quote-text font-size-large">
-              "Skylight gives me ownership over my work and allows me to carve a path where I
-              can make the biggest impact."
+              “Skylight gives me ownership over my work and allows me to carve a path where I
+              can make the biggest impact.”
             </p>
 
             <p><b><span class="text-gray-light">—</span> Laura King,</b> UX Designer</p>
