--- a/pages/trainings/ditap.html
+++ b/pages/trainings/ditap.html
@@ -389,12 +389,21 @@ class_2_spots:
               will be conducted virtually.
             </p>
             <div class="tuition-card-meta mt-3">
-              <p><strong>Location:</strong> Online + Washington DC</p>
-              <p>
-                <strong>Instructors:</strong> Chris Cairns, Dan Levenson, Robert
-                Read, and Lara Kohl
-              </p>
-              <p><strong>Cost:</strong> $7,500 USD</p>
+              <div class="tuition-card-meta-info">
+                <h4>Location</h4>
+                <p>Online + Washington DC</p>
+              </div>
+              <div class="tuition-card-meta-info">
+                <h4>Instructors</h4>
+                <p>
+                  Chris Cairns, Dan Levenson, Robert
+                  Read, and Lara Kohl
+                </p>
+              </div>
+              <div class="tuition-card-meta-info">
+                <h4>Cost</h4>
+                <p>$7,500 USD</p>
+              </div>
             </div>
             <p class="mt-2">
               <strong class="tuition-card-link"
