update ditap trainers

--- a/pages/trainings/ditap_executive.html
+++ b/pages/trainings/ditap_executive.html
@@ -326,19 +326,17 @@ class_2_spots:
               <div
                 role="img"
                 class="employee-img"
-                style="background-image: url(/img/people/lara-kohl.jpg)"
-                title="Lara Kohl"
+                style="background-image: url(/img/people/leslie-garner-franklin.jpg)"
+                title="Leslie Garner Franklin"
               ></div>
             </div>
           </div>
           <div class="col-12 col-lg-8">
-            <h3>Lara Kohl</h3>
+            <h3>Leslie Garner Franklin</h3>
             <p>
-              Lara is a former member of the U.S. Digital Service, where she
-              served as the UX lead over the Veteran Appeals Modernization
-              initiative. She’s also a former professor at NYU, SUNY, and Pratt
-              Institute. Lara specializes in design leadership, design research,
-              service design, and user experience design.
+              Leslie brings nearly two decades of experience in user research, user experience design,
+              product management, digital leadership, and instructional design. She started her career
+              at Teach For America, and has worked for notable design firms such as EchoUser.
             </p>
           </div>
         </div>
