shorten contact us page hero copy

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -9,7 +9,7 @@ preload: hero-contact-us.svg
 ---
 
 {% include hero_banner.html
-  hero_content = "We'd love to work with you on turning your most bold idea or complex problem into a public success story."
+  hero_content = "We'd love to help turn your most bold idea or complex problem into a public success story."
   image = ""
   color = "yellow"
   text = "dark"
