--- a/pages/contact.html
+++ b/pages/contact.html
@@ -16,7 +16,7 @@ preload: hero-contact-us.svg
   image = 'hero-contact-us.svg'
 %}
 
-<div class="contact-us text">
+<div class="contact-us container maxw-prose text">
   <p>
     Please describe what you’re looking to do, and we’ll follow up in one business day.
     If you prefer, you can email us at <a href="mailto:hello@skylight.digital">hello@skylight.digital</a>.
