--- a/pages/contracting.html
+++ b/pages/contracting.html
@@ -12,8 +12,8 @@ preload: hero-contracting.svg
   image = 'hero-contracting.svg'
 %}
 
-<section class="container-md mx-auto">
-  <div class="container text prose left-justified-list left-justified-list-compact">
+<section class="container maxw-prose">
+  <div class="text prose left-justified-list left-justified-list-compact">
     <h2>Pioneers and leaders</h2>
     <ul>
       <li>Named by G2Xchange as one of the <a href="https://fetch.g2xmedia.io/2020-nxt-up/">top vendors to work with in 2020</a></li>
