--- a/pages/toolkits.html
+++ b/pages/toolkits.html
@@ -11,8 +11,8 @@ preload: hero-toolkits.svg
   image = 'hero-toolkits.svg'
 %}
 
-<section class="mx-auto maxw-lg">
-  <div class="container text prose">
+<section class="maxw-md container text prose">
+  <div>
     <p>
       Here are some of the tools and resources that we use at Skylight to help
       us and our clients deliver better public services. These toolkits are
