--- a/pages/training.html
+++ b/pages/training.html
@@ -11,7 +11,7 @@ preload: hero-training.svg
   image = 'hero-training.svg'
 %}
 
-<section class="mx-auto maxw-lg">
+<section class="mx-auto maxw-md">
   <div class="container text prose">
     <div class="blog-posts-row mt-5">
       <article class="blog-post-col col-md-6">
