ditap page copy edit

--- a/pages/trainings/ditap.html
+++ b/pages/trainings/ditap.html
@@ -471,7 +471,7 @@ class_2_spots:
         'What’s the expected workload?' accordion_body = accordion_body
         accordion_index = '3' %} {% capture accordion_body %}
         <ul>
-          <li>6 months of Digital Acquisition training.</li>
+          <li>6 months of digital acquisition training.</li>
           <li>
             Access to all course materials and our online learning platform.
           </li>
