ditap copy edits

--- a/pages/trainings/ditap_executive.html
+++ b/pages/trainings/ditap_executive.html
@@ -530,7 +530,7 @@ class_2_spots:
             100% of the registration cost.
           </li>
         </ul>
-        {% endcapture %} {% include accordion.html accordion_header = "What's
+        {% endcapture %} {% include accordion.html accordion_header = "What’s
         the cancellation policy?" accordion_body = accordion_body
         accordion_index = '10' %}
       </div>
@@ -538,7 +538,7 @@ class_2_spots:
   </div>
 </div>
 
-{% include cta.html header = "Still have more questions?" text = "Please don't
-hesitate to ask. We've got answers for you." text_css_class =
+{% include cta.html header = "Have more questions?" text = "We’ve got answers for you!
+Drop us an email and we’ll get back within one business day." text_css_class =
 "page-subfooter-text-col" cta_path = "mailto:training@skylight.digital" cta =
 "Email us" icon_css_class = "fa fa-at" %}
