ensure links in cards go to their pages

--- a/pages/toolkits.html
+++ b/pages/toolkits.html
@@ -40,7 +40,7 @@ preload: hero-toolkits.svg
             </p>
           </div>
           <div class="blog-post-footer">
-            <a href="" tabindex="0">
+            <a href="/work/toolkits/digital-talent-management/" tabindex="0">
               <span>View handbook</span
               ><i class="fal fa-long-arrow-right" aria-hidden="true"></i>
             </a>
@@ -62,7 +62,7 @@ preload: hero-toolkits.svg
             </p>
           </div>
           <div class="blog-post-footer">
-            <a href="" tabindex="0">
+            <a href="/work/toolkits/data-sharing-playbook/" tabindex="0">
               <span>View playbook</span
               ><i class="fal fa-long-arrow-right" aria-hidden="true"></i>
             </a>
@@ -84,7 +84,7 @@ preload: hero-toolkits.svg
             </p>
           </div>
           <div class="blog-post-footer">
-            <a href="" tabindex="0">
+            <a href="/work/toolkits/accessibility-guide/" tabindex="0">
               <span>View guide</span
               ><i class="fal fa-long-arrow-right" aria-hidden="true"></i>
             </a>
@@ -106,7 +106,7 @@ preload: hero-toolkits.svg
             </p>
           </div>
           <div class="blog-post-footer">
-            <a href="" tabindex="0">
+            <a href="/work/toolkits/agile-procurement-playbook/" tabindex="0">
               <span>View playbook</span
               ><i class="fal fa-long-arrow-right" aria-hidden="true"></i>
             </a>
@@ -128,7 +128,7 @@ preload: hero-toolkits.svg
             </p>
           </div>
           <div class="blog-post-footer">
-            <a href="" tabindex="0">
+            <a href="/work/toolkits/managing-technical-debt/" tabindex="0">
               <span>View guide</span
               ><i class="fal fa-long-arrow-right" aria-hidden="true"></i>
             </a>
