--- a/pages/training.html
+++ b/pages/training.html
@@ -17,7 +17,7 @@ preload: hero-training.svg
       <article class="blog-post-col col-md-6">
         <div
           class="blog-post-card card-link"
-          data-href="{{ site.baseurl }}/work/services/training/ditap/"
+          data-href="/work/services/training/ditap/"
           tabindex="-1"
         >
           <div class="blog-post-block">
@@ -30,7 +30,7 @@ preload: hero-training.svg
             </p>
           </div>
           <div class="blog-post-footer">
-            <a href="" tabindex="0">
+            <a href="/work/services/training/ditap/" tabindex="0">
               <span>Learn more</span
               ><i class="fal fa-long-arrow-right" aria-hidden="true"></i>
             </a>
@@ -54,7 +54,7 @@ preload: hero-training.svg
             </p>
           </div>
           <div class="blog-post-footer">
-            <a href="" tabindex="0">
+            <a href="/work/services/training/ditap-executive/" tabindex="0">
               <span>Learn more</span
               ><i class="fal fa-long-arrow-right" aria-hidden="true"></i>
             </a>
