move ditap cta to include

--- a/pages/trainings/ditap_executive.html
+++ b/pages/trainings/ditap_executive.html
@@ -538,7 +538,4 @@ class_2_spots:
   </div>
 </div>
 
-{% include cta.html header = "Have more questions?" text = "We’ve got answers for you!
-Drop us an email and we’ll get back within one business day." text_css_class =
-"page-subfooter-text-col" cta_path = "mailto:training@skylight.digital" cta =
-"Email us" icon_css_class = "fa fa-at" %}
+{% include ditap_cta.html %}
