update service design page

--- a/pages/trainings/service-design.html
+++ b/pages/trainings/service-design.html
@@ -6,18 +6,18 @@ excerpt: Deliver better public services.
 image: /img/ditap/ditap-banner.png
 image_description: Banner of Skylight's Digital IT Acquisition Professional Training course.
 tags: [digital acquisition training, agile acquisition training]
-class: ditap
+class: ditap page-service-design
 preload: hero.svg
 class_1_spots:
 class_2_spots:
 ---
 
 <div
-  class="bg-blue hero-banner"
+  class="bg-info hero-banner"
   style="
-    background-image: url(/img/hero.svg);
+    background-image: url(/img/hero-service-design.svg);
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: 1190px;
   "
 >
   <div class="hero">
@@ -30,6 +30,9 @@ class_2_spots:
           <p class="text-white font-xl mt-2 mb-0">
             Deliver better public services.
           </p>
+          <a class="btn btn-warning btn-lg text-dark mt-3" href="/connect/contact/" role="button">
+            <span class="font-bold">Learn how with Skylight</span>
+          </a>
         </div>
       </div>
     </div>
@@ -154,7 +157,8 @@ class_2_spots:
               </div>
             </div>
           </article>
-          <article class="col-6">
+          <div class="col-6"></div>
+          <article class="col-6 mt-5">
             <div
               class="blog-post-card card-link"
               data-href="https://www.publicspendforum.net/podcasts/modernizing-government-it-micropurchase-podcast/"
@@ -189,6 +193,7 @@ class_2_spots:
               </div>
             </div>
           </article>
+          <div class="col-6"></div>
           <article class="col-6 mt-5">
             <div
               class="blog-post-card card-link"
@@ -250,8 +255,11 @@ class_2_spots:
   </div>
 </div>
 
-{% include cta.html header = "Deliver better public services." text = "Ready to
-create transformative user experiences through service design? Let’s get to
-work." text_css_class = "page-subfooter-text-col" cta_path =
-"mailto:training@skylight.digital" cta = "Contact us" icon_css_class = "fa
-fa-at" %}
+{% include cta.html
+  header = "Deliver better public services."
+  text = "Ready to create transformative user experiences through service design? Let’s get to work."
+  text_css_class = "page-subfooter-text-col"
+  cta_path = "mailto:training@skylight.digital"
+  cta = "Contact us"
+  icon_css_class = "fa fa-at"
+%}
