widen case studies

--- a/pages/trainings/service-design.html
+++ b/pages/trainings/service-design.html
@@ -125,7 +125,7 @@ class_2_spots:
         />
         <h2 class="margin-heading" id="case-studies">Case studies</h2>
         <div class="blog-posts-row">
-          <article class="col-6">
+          <article class="col-8">
             <div
               class="blog-post-card card-link"
               data-href="/work/experience/usaf-gearfit/"
@@ -157,8 +157,8 @@ class_2_spots:
               </div>
             </div>
           </article>
-          <div class="col-6"></div>
-          <article class="col-6 mt-5">
+          <div class="col-"></div>
+          <article class="col-8 mt-5">
             <div
               class="blog-post-card card-link"
               data-href="https://www.publicspendforum.net/podcasts/modernizing-government-it-micropurchase-podcast/"
@@ -193,8 +193,8 @@ class_2_spots:
               </div>
             </div>
           </article>
-          <div class="col-6"></div>
-          <article class="col-6 mt-5">
+          <div class="col-"></div>
+          <article class="col-8 mt-5">
             <div
               class="blog-post-card card-link"
               data-href="https://www.publicspendforum.net/podcasts/modernizing-government-it-micropurchase-podcast/"
