Adjust max widths

--- a/pages/contracting.html
+++ b/pages/contracting.html
@@ -12,7 +12,7 @@ preload: hero-contracting.svg
   image = 'hero-contracting.svg'
 %}
 
-<section class="container maxw-prose">
+<section class="grid-container maxw-prose">
   <div class="text prose left-justified-list left-justified-list-compact">
     <h2>Pioneers and leaders</h2>
     <ul>
