--- a/pages/experience/index.html
+++ b/pages/experience/index.html
@@ -35,7 +35,7 @@ pagination:
 {% include hanging_column_size.html collection_size = collection_size col_size = 3 %}
 
 <div class="our-experience">
-  <div class="projects container">
+  <div class="projects grid-container maxw-2xl">
     <div class="projects-row">
       {% for item in paginator.posts %}
       <article
