--- a/pages/press.html
+++ b/pages/press.html
@@ -16,7 +16,7 @@ preload: hero-press.svg
   color = 'info'
   image = 'hero-press.svg'
 %}
-<section class="container maxw-prose">
+<section class="grid-container maxw-prose">
   <div class="text">
     {% for item in paginator.posts %}
       <article class="press__article">
