--- a/pages/services.html
+++ b/pages/services.html
@@ -17,7 +17,7 @@ digital-first agency.' color = 'blue' image = 'hero-services.svg' %}
 
 <div class="services-content left-justified-list">
   <div class="">
-    <div class="container prose">
+    <div class="grid-container prose">
       <div class="row">
         <div class="col-md-6 order-2 order-md-1 mt-4 mt-md-0">
           <h2>Service Delivery</h2>
@@ -79,7 +79,7 @@ digital-first agency.' color = 'blue' image = 'hero-services.svg' %}
   </div>
 
   <div class="mt-5 bg-ochre-lightest py-5">
-    <div class="container prose">
+    <div class="grid-container prose">
       <div class="row">
         <div class="col-md-6 order-2 order-md-1 mt-4 mt-md-0">
           <h2>Procurement</h2>
@@ -137,7 +137,7 @@ digital-first agency.' color = 'blue' image = 'hero-services.svg' %}
   </div>
 
   <div class="mt-5">
-    <div class="container prose">
+    <div class="grid-container prose">
       <div class="row">
         <div class="col-md-6 order-2 order-md-1 mt-4 mt-md-0">
           <h2>Transformation</h2>
@@ -197,7 +197,7 @@ digital-first agency.' color = 'blue' image = 'hero-services.svg' %}
   </div>
 
   <div class="mt-5 bg-ochre-lightest py-5">
-    <div class="container prose">
+    <div class="grid-container prose">
       <div class="row">
         <div class="col-md-6 order-2 order-md-1 mt-4 mt-md-0">
           <h2>Microconsulting</h2>
@@ -265,7 +265,7 @@ digital-first agency.' color = 'blue' image = 'hero-services.svg' %}
   </div>
 
   <div class="mt-5">
-    <div class="container prose">
+    <div class="grid-container prose">
       <div class="row">
         <div class="col-md-6 order-2 order-md-1 mt-4 mt-md-0">
           <h2>Training</h2>
