--- a/pages/talks.html
+++ b/pages/talks.html
@@ -11,7 +11,7 @@ preload: hero-talks.svg
   image = 'hero-talks.svg'
 %}
 
-<div class="container">
+<div class="grid-container">
   <h2 class="margin-heading">Featured</h2>
   <div class="talk__featured row">
     <div class="col-sm-8 d-flex flex-column align-items-stretch">
