--- a/pages/trainings/service-design.html
+++ b/pages/trainings/service-design.html
@@ -39,7 +39,7 @@ class_2_spots:
   </div>
 </div>
 
-<div class="container">
+<div class="grid-container">
   <div class="row">
     <div class="sidenav col-12 col-md-3 mt-5 d-none d-md-block">
       <div class="is-sticky">
