--- a/pages/type_test.html
+++ b/pages/type_test.html
@@ -4,7 +4,7 @@ title: Type test
 permalink: /type/
 ---
 
-<div class="container">
+<div class="grid-container">
   <p class="font-weight-bold">Site headings</p>
   <h1>Heading 1 - 64</h1>
   <h2>Heading 2 - 48</h2>
