--- a/pages/values.html
+++ b/pages/values.html
@@ -13,7 +13,7 @@ preload: hero-values.svg
 %}
 
 <div class="our-values">
-  <div class="values container maxw-xl">
+  <div class="values grid-container">
     <div class="values-row">
       {% assign values = site.data.values | sort: 'order' %}
       {% for value in values %}
