--- a/pages/about.html
+++ b/pages/about.html
@@ -16,7 +16,7 @@ preload: hero-about-us.svg
 <div class="about-us">
 
   <section class="page-block">
-    <div class="about-info container maxw-md">
+    <div class="about-info grid-container maxw-md">
       <h2 class="margin-heading text-center">Our story</h2>
       <p>
         Skylight was launched in June of 2017. We’re currently made up of 55 people and
