--- a/pages/join.html
+++ b/pages/join.html
@@ -13,7 +13,7 @@ preload: hero-join-us.svg
   image = 'hero-join-us.svg'
 %}
 
-<div class="container">
+<div class="grid-container">
   <div class="row">
     <div class="sidenav col-12 col-md-3 d-none d-md-block">
       <div class="is-sticky">
