--- a/pages/toolkits.html
+++ b/pages/toolkits.html
@@ -11,7 +11,7 @@ preload: hero-toolkits.svg
   image = 'hero-toolkits.svg'
 %}
 
-<section class="maxw-md container text prose">
+<section class="maxw-md grid-container text prose">
   <div>
     <p>
       Here are some of the tools and resources that we use at Skylight to help
