--- a/pages/trainings/ditap.html
+++ b/pages/trainings/ditap.html
@@ -61,7 +61,7 @@ class_2_spots:
   </div>
 </div>
 
-<div class="container page-ditap-content">
+<div class="grid-container page-ditap-content">
   <div class="row">
     <div class="sidenav col-12 col-md-3 mt-6 d-none d-md-block">
       <div class="is-sticky">
