update maxws of policy pgs

--- a/pages/policies.html
+++ b/pages/policies.html
@@ -8,7 +8,7 @@ permalink: /company/policies/
   header_class = 'page-header-2'
 %}
 
-<div class="our-policies">
+<div class="our-policies grid-container maxw-prose">
 
   <div class="policies-row">
     <div class="text-lead-col">
